test/files/invalid/include_hint.stderr
error: Unknown type
  ┌─ test/files/invalid/helpers/include_hint_helper1.fbs:2:6
  │
2 │   x: Bar;
  │      ^^^
  │
  ┌─ test/files/invalid/helpers/include_hint_helper2.fbs:1:1
  │
1 │ table Bar {}
  │ --------- Perhaps you meant to include test/files/invalid/helpers/include_hint_helper2.fbs

Error: Bailing because of errors
